# post-init

./: Cargo.toml  README.md
src/: config.rs  main.rs
src/commands/: cargonew.rs  config.rs  mod.rs  tuarinew.rs  uvinit.rs
