[package]
name = "post-init"
version = "0.1.1"
edition = "2024"

[dependencies]
anyhow = "1.0.98"
clap = { version = "4.5.40", features = ["derive"] }
dirs = "6.0.0"
serde = { version = "1.0.219", features = ["derive"] }
toml = "0.8.23"
toml_edit = "0.22.27"

[dev-dependencies]
tempfile = "3.20.0"

[profile.release]
opt-level = 3
lto = true
debug = false
strip = true
codegen-units = 1
panic = "abort"
